libs/fitsio.h

    typedef __int64 LONGLONG;
    typedef unsigned __int64 ULONGLONG;
    typedef long long LONGLONG;
    typedef unsigned long long ULONGLONG;
    typedef __int64 LONGLONG;
    typedef unsigned __int64 ULONGLONG;
    typedef long long LONGLONG;
    typedef unsigned long long ULONGLONG;
typedef struct      
{
    int filehandle;   
    int driver;       
    int open_count;   
    char *filename;   
    int validcode;    
    int only_one;     
    int noextsyntax;  
    LONGLONG filesize; 
    LONGLONG logfilesize; 
    int lasthdu;      
    LONGLONG bytepos; 
    LONGLONG io_pos;  
    int curbuf;        
    int curhdu;       
    int hdutype;      
    int writemode;    
    int maxhdu;       
    int MAXHDU;       
    LONGLONG *headstart; 
    LONGLONG headend;   
    LONGLONG ENDpos;    
    LONGLONG nextkey;   
    LONGLONG datastart; 
    int imgdim;         
    LONGLONG imgnaxis[99]; 
    int tfield;          
    int startcol;        
    LONGLONG origrows;   
    LONGLONG numrows;    
    LONGLONG rowlength;  
    tcolumn *tableptr;   
    LONGLONG heapstart;  
    LONGLONG heapsize;   
    int request_compress_type;  
    long request_tilesize[MAX_COMPRESS_DIM]; 
    float request_quantize_level;  
    int request_quantize_method ;  
    int request_dither_seed;     
    int request_lossy_int_compress; 
    int request_huge_hdu;          
    float request_hcomp_scale;     
    int request_hcomp_smooth;      
    int compress_type;      
    long tilesize[MAX_COMPRESS_DIM]; 
    float quantize_level;   
    int quantize_method;   
    int dither_seed;      
    int compressimg; 
    char zcmptype[12];      
    int zbitpix;            
    int zndim;              
    long znaxis[MAX_COMPRESS_DIM];  
    long maxtilelen;        
    long maxelem;	    
    int cn_compressed;	    
    int cn_uncompressed;    
    int cn_gzip_data;       
    int cn_zscale;	    
    int cn_zzero;	    
    int cn_zblank;          
    double zscale;          
    double zzero;           
    double cn_bscale;       
    double cn_bzero;        
    double cn_actual_bzero; 
    int zblank;             
    int rice_blocksize;     
    int rice_bytepix;       
    float hcomp_scale;      
    int hcomp_smooth;       
    int  *tilerow;          
    long *tiledatasize;     
    int *tiletype;          
    void **tiledata;        
    void **tilenullarray;   
    int *tileanynull;       
    char *iobuffer;         
    long bufrecnum[NIOBUF]; 
    int dirty[NIOBUF];     
    int ageindex[NIOBUF];    
} FITSfile;
typedef struct         
{
    int HDUposition;  
    FITSfile *Fptr;   
}fitsfile;
int CFITS_API ffdelt(fitsfile *fptr, int *status);
int CFITS_API ffflnm(fitsfile *fptr, char *filename, int *status);
int CFITS_API ffflmd(fitsfile *fptr, int *filemode, int *status);
int CFITS_API fits_delete_iraf_file(const char *filename, int *status);
float CFITS_API ffvers(float *version);
void CFITS_API ffupch(char *string);
void CFITS_API ffgerr(int status, char *errtext);
void CFITS_API ffpmsg(const char *err_message);
void CFITS_API ffpmrk(void);
int  CFITS_API ffgmsg(char *err_message);
void CFITS_API ffcmsg(void);
void CFITS_API ffcmrk(void);
void CFITS_API ffrprt(FILE *stream, int status);
void CFITS_API ffcmps(char *templt, char *colname, int  casesen, int *match,
           int *exact);
int CFITS_API fftkey(const char *keyword, int *status);
int CFITS_API fftrec(char *card, int *status);
int CFITS_API ffnchk(fitsfile *fptr, int *status);
int CFITS_API ffkeyn(const char *keyroot, int value, char *keyname, int *status);
int CFITS_API ffnkey(int value, const char *keyroot, char *keyname, int *status);
int CFITS_API ffgkcl(char *card);
int CFITS_API ffdtyp(const char *cval, char *dtype, int *status);
int CFITS_API ffinttyp(char *cval, int *datatype, int *negative, int *status);
int CFITS_API ffpsvc(char *card, char *value, char *comm, int *status);
int CFITS_API ffgknm(char *card, char *name, int *length, int *status);
int CFITS_API ffgthd(char *tmplt, char *card, int *hdtype, int *status);
int CFITS_API ffmkky(const char *keyname, char *keyval, const char *comm, char *card, int *status);
int CFITS_API fits_translate_keyword(char *inrec, char *outrec, char *patterns[][2],
          int npat, int n_value, int n_offset, int n_range, int *pat_num,
          int *i, int *j,  int *m, int *n, int *status);
int CFITS_API fits_translate_keywords(fitsfile *infptr, fitsfile *outfptr,
          int firstkey, char *patterns[][2],
          int npat, int n_value, int n_offset, int n_range, int *status);
int CFITS_API ffasfm(char *tform, int *datacode, long *width, int *decim, int *status);
int CFITS_API ffbnfm(char *tform, int *datacode, long *repeat, long *width, int *status);
int CFITS_API ffbnfmll(char *tform, int *datacode, LONGLONG *repeat, long *width, int *status);
int CFITS_API ffgabc(int tfields, char **tform, int space, long *rowlen, long *tbcol,
           int *status);
int CFITS_API fits_get_section_range(char **ptr,long *secmin,long *secmax,long *incre,
              int *status);
int CFITS_API ffmbyt(fitsfile *fptr, LONGLONG bytpos, int ignore_err, int *status);
int CFITS_API ffpky(fitsfile *fptr, int datatype, const char *keyname, void *value,
          const char *comm, int *status);
int CFITS_API ffprec(fitsfile *fptr, const char *card, int *status);
int CFITS_API ffpcom(fitsfile *fptr, const char *comm, int *status);
int CFITS_API ffpunt(fitsfile *fptr, const char *keyname, const char *unit, int *status);
int CFITS_API ffphis(fitsfile *fptr, const char *history, int *status);
int CFITS_API ffpdat(fitsfile *fptr, int *status);
int CFITS_API ffverifydate(int year, int month, int day, int *status);
int CFITS_API ffgstm(char *timestr, int *timeref, int *status);
int CFITS_API ffgsdt(int *day, int *month, int *year, int *status);
int CFITS_API ffdt2s(int year, int month, int day, char *datestr, int *status);
int CFITS_API fftm2s(int year, int month, int day, int hour, int minute, double second,
          int decimals, char *datestr, int *status);
int CFITS_API ffs2dt(char *datestr, int *year, int *month, int *day, int *status);
int CFITS_API ffs2tm(char *datestr, int *year, int *month, int *day, int *hour,
          int *minute, double *second, int *status);
int CFITS_API ffpkyu(fitsfile *fptr, const char *keyname, const char *comm, int *status);
int CFITS_API ffpkys(fitsfile *fptr, const char *keyname, const char *value, const char *comm,int *status);
int CFITS_API ffpkls(fitsfile *fptr, const char *keyname, const char *value, const char *comm,int *status);
int CFITS_API ffplsw(fitsfile *fptr, int *status);
int CFITS_API ffpkyl(fitsfile *fptr, const char *keyname, int  value, const char *comm, int *status);
int CFITS_API ffpkyj(fitsfile *fptr, const char *keyname, LONGLONG value, const char *comm, int *status);
int CFITS_API ffpkyuj(fitsfile *fptr, const char *keyname, ULONGLONG value, const char *comm, int *status);
int CFITS_API ffpkyf(fitsfile *fptr, const char *keyname, float value, int decim, const char *comm,
          int *status);
int CFITS_API ffpkye(fitsfile *fptr, const char *keyname, float  value, int decim, const char *comm,
          int *status);
int CFITS_API ffpkyg(fitsfile *fptr, const char *keyname, double value, int decim, const char *comm,
          int *status);
int CFITS_API ffpkyd(fitsfile *fptr, const char *keyname, double value, int decim, const char *comm,
          int *status);
int CFITS_API ffpkyc(fitsfile *fptr, const char *keyname, float *value, int decim, const char *comm,
          int *status);
int CFITS_API ffpkym(fitsfile *fptr, const char *keyname, double *value, int decim, const char *comm,
          int *status);
int CFITS_API ffpkfc(fitsfile *fptr, const char *keyname, float *value, int decim, const char *comm,
          int *status);
int CFITS_API ffpkfm(fitsfile *fptr, const char *keyname, double *value, int decim, const char *comm,
          int *status);
int CFITS_API ffpkyt(fitsfile *fptr, const char *keyname, long intval, double frac, const char *comm,
          int *status);
int CFITS_API ffptdm( fitsfile *fptr, int colnum, int naxis, long naxes[], int *status);
int CFITS_API ffptdmll( fitsfile *fptr, int colnum, int naxis, LONGLONG naxes[], int *status);
int CFITS_API ffpkns(fitsfile *fptr, const char *keyroot, int nstart, int nkey, char *value[],
           char *comm[], int *status);
int CFITS_API ffpknl(fitsfile *fptr, const char *keyroot, int nstart, int nkey, int *value,
           char *comm[], int *status);
int CFITS_API ffpknj(fitsfile *fptr, const char *keyroot, int nstart, int nkey, long *value,
           char *comm[], int *status);
int CFITS_API ffpknjj(fitsfile *fptr, const char *keyroot, int nstart, int nkey, LONGLONG *value,
           char *comm[], int *status);
int CFITS_API ffpknf(fitsfile *fptr, const char *keyroot, int nstart, int nkey, float *value,
           int decim, char *comm[], int *status);
int CFITS_API ffpkne(fitsfile *fptr, const char *keyroot, int nstart, int nkey, float *value,
           int decim, char *comm[], int *status);
int CFITS_API ffpkng(fitsfile *fptr, const char *keyroot, int nstart, int nkey, double *value,
           int decim, char *comm[], int *status);
int CFITS_API ffpknd(fitsfile *fptr, const char *keyroot, int nstart, int nkey, double *value,
           int decim, char *comm[], int *status);
int CFITS_API ffcpky(fitsfile *infptr,fitsfile *outfptr,int incol,int outcol,
           char *rootname, int *status);
int CFITS_API ffphps( fitsfile *fptr, int bitpix, int naxis, long naxes[], int *status);
int CFITS_API ffphpsll( fitsfile *fptr, int bitpix, int naxis, LONGLONG naxes[], int *status);
int CFITS_API ffphpr( fitsfile *fptr, int simple, int bitpix, int naxis, long naxes[],
            LONGLONG pcount, LONGLONG gcount, int extend, int *status);
int CFITS_API ffphprll( fitsfile *fptr, int simple, int bitpix, int naxis, LONGLONG naxes[],
            LONGLONG pcount, LONGLONG gcount, int extend, int *status);
int CFITS_API ffphtb(fitsfile *fptr, LONGLONG naxis1, LONGLONG naxis2, int tfields, char **ttype,
          long *tbcol, char **tform, char **tunit, const char *extname, int *status);
int CFITS_API ffphbn(fitsfile *fptr, LONGLONG naxis2, int tfields, char **ttype,
          char **tform, char **tunit, const char *extname, LONGLONG pcount, int *status);
int CFITS_API ffphext( fitsfile *fptr, const char *xtension, int bitpix, int naxis, long naxes[],
            LONGLONG pcount, LONGLONG gcount, int *status);
int CFITS_API ffpktp(fitsfile *fptr, const char *filename, int *status);
int CFITS_API ffghsp(fitsfile *fptr, int *nexist, int *nmore, int *status);
int CFITS_API ffghps(fitsfile *fptr, int *nexist, int *position, int *status);
int CFITS_API ffmaky(fitsfile *fptr, int nrec, int *status);
int CFITS_API ffmrky(fitsfile *fptr, int nrec, int *status);
int CFITS_API ffgnxk(fitsfile *fptr, char **inclist, int ninc, char **exclist,
           int nexc, char *card, int  *status);
int CFITS_API ffgrec(fitsfile *fptr, int nrec,      char *card, int *status);
int CFITS_API ffgcrd(fitsfile *fptr, const char *keyname, char *card, int *status);
int CFITS_API ffgstr(fitsfile *fptr, const char *string, char *card, int *status);
int CFITS_API ffgunt(fitsfile *fptr, const char *keyname, char *unit, int  *status);
int CFITS_API ffgkyn(fitsfile *fptr, int nkey, char *keyname, char *keyval, char *comm,
           int *status);
int CFITS_API ffgkey(fitsfile *fptr, const char *keyname, char *keyval, char *comm,
           int *status);
int CFITS_API ffgky( fitsfile *fptr, int datatype, const char *keyname, void *value,
           char *comm, int *status);
int CFITS_API ffgkys(fitsfile *fptr, const char *keyname, char *value, char *comm, int *status);
int CFITS_API ffgksl(fitsfile *fptr, const char *keyname, int *length, int *status);
int CFITS_API ffgkcsl(fitsfile *fptr, const char *keyname, int *length, int *comlength, int *status);
int CFITS_API ffgkls(fitsfile *fptr, const char *keyname, char **value, char *comm, int *status);
int CFITS_API ffgsky(fitsfile *fptr, const char *keyname, int firstchar, int maxchar,
               char *value, int *valuelen, char *comm, int *status);
int CFITS_API ffgskyc(fitsfile *fptr, const char *keyname, int firstchar, int maxchar,
               int maxcomchar, char *value, int *valuelen, char *comm, int *comlen, int *status);
int CFITS_API fffree(void *value,  int  *status);
int CFITS_API fffkls(char *value, int *status);
int CFITS_API ffgkyl(fitsfile *fptr, const char *keyname, int *value, char *comm, int *status);