src/wrapper.zig

pub extern fn ffdelt(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffflnm(fptr: [*c]fitsfile, filename: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffflmd(fptr: [*c]fitsfile, filemode: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fits_delete_iraf_file(filename: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffvers(version: [*c]f32) f32;
pub extern fn ffupch(string: [*c]u8) void;
pub extern fn ffgerr(status: c_int, errtext: [*c]u8) void;
pub extern fn ffpmsg(err_message: [*c]const u8) void;
pub extern fn ffpmrk() void;
pub extern fn ffgmsg(err_message: [*c]u8) c_int;
pub extern fn ffcmsg() void;
pub extern fn ffcmrk() void;
pub extern fn ffrprt(stream: [*c]FILE, status: c_int) void;
pub extern fn ffcmps(templt: [*c]u8, colname: [*c]u8, casesen: c_int, match: [*c]c_int, exact: [*c]c_int) void;
pub extern fn fftkey(keyword: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn fftrec(card: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffnchk(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffkeyn(keyroot: [*c]const u8, value: c_int, keyname: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffnkey(value: c_int, keyroot: [*c]const u8, keyname: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkcl(card: [*c]u8) c_int;
pub extern fn ffdtyp(cval: [*c]const u8, dtype: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffinttyp(cval: [*c]u8, datatype: [*c]c_int, negative: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffpsvc(card: [*c]u8, value: [*c]u8, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgknm(card: [*c]u8, name: [*c]u8, length: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgthd(tmplt: [*c]u8, card: [*c]u8, hdtype: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffmkky(keyname: [*c]const u8, keyval: [*c]u8, comm: [*c]const u8, card: [*c]u8, status: [*c]c_int) c_int;
pub extern fn fits_translate_keyword(inrec: [*c]u8, outrec: [*c]u8, patterns: [*c][2][*c]u8, npat: c_int, n_value: c_int, n_offset: c_int, n_range: c_int, pat_num: [*c]c_int, i: [*c]c_int, j: [*c]c_int, m: [*c]c_int, n: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fits_translate_keywords(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, firstkey: c_int, patterns: [*c][2][*c]u8, npat: c_int, n_value: c_int, n_offset: c_int, n_range: c_int, status: [*c]c_int) c_int;
pub extern fn ffasfm(tform: [*c]u8, datacode: [*c]c_int, width: [*c]c_long, decim: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffbnfm(tform: [*c]u8, datacode: [*c]c_int, repeat: [*c]c_long, width: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffbnfmll(tform: [*c]u8, datacode: [*c]c_int, repeat: [*c]LONGLONG, width: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgabc(tfields: c_int, tform: [*c][*c]u8, space: c_int, rowlen: [*c]c_long, tbcol: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn fits_get_section_range(ptr: [*c][*c]u8, secmin: [*c]c_long, secmax: [*c]c_long, incre: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffmbyt(fptr: [*c]fitsfile, bytpos: LONGLONG, ignore_err: c_int, status: [*c]c_int) c_int;
pub extern fn ffpky(fptr: [*c]fitsfile, datatype: c_int, keyname: [*c]const u8, value: ?*anyopaque, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffprec(fptr: [*c]fitsfile, card: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpcom(fptr: [*c]fitsfile, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpunt(fptr: [*c]fitsfile, keyname: [*c]const u8, unit: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffphis(fptr: [*c]fitsfile, history: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpdat(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffverifydate(year: c_int, month: c_int, day: c_int, status: [*c]c_int) c_int;
pub extern fn ffgstm(timestr: [*c]u8, timeref: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsdt(day: [*c]c_int, month: [*c]c_int, year: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffdt2s(year: c_int, month: c_int, day: c_int, datestr: [*c]u8, status: [*c]c_int) c_int;
pub extern fn fftm2s(year: c_int, month: c_int, day: c_int, hour: c_int, minute: c_int, second: f64, decimals: c_int, datestr: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffs2dt(datestr: [*c]u8, year: [*c]c_int, month: [*c]c_int, day: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffs2tm(datestr: [*c]u8, year: [*c]c_int, month: [*c]c_int, day: [*c]c_int, hour: [*c]c_int, minute: [*c]c_int, second: [*c]f64, status: [*c]c_int) c_int;
pub extern fn ffpkyu(fptr: [*c]fitsfile, keyname: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkys(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkls(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffplsw(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffpkyl(fptr: [*c]fitsfile, keyname: [*c]const u8, value: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkyj(fptr: [*c]fitsfile, keyname: [*c]const u8, value: LONGLONG, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkyuj(fptr: [*c]fitsfile, keyname: [*c]const u8, value: ULONGLONG, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkyf(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkye(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkyg(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkyd(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkyc(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkym(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkfc(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkfm(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffpkyt(fptr: [*c]fitsfile, keyname: [*c]const u8, intval: c_long, frac: f64, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffptdm(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffptdmll(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffpkns(fptr: [*c]fitsfile, keyroot: [*c]const u8, nstart: c_int, nkey: c_int, value: [*c][*c]u8, comm: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpknl(fptr: [*c]fitsfile, keyroot: [*c]const u8, nstart: c_int, nkey: c_int, value: [*c]c_int, comm: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpknj(fptr: [*c]fitsfile, keyroot: [*c]const u8, nstart: c_int, nkey: c_int, value: [*c]c_long, comm: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpknjj(fptr: [*c]fitsfile, keyroot: [*c]const u8, nstart: c_int, nkey: c_int, value: [*c]LONGLONG, comm: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpknf(fptr: [*c]fitsfile, keyroot: [*c]const u8, nstart: c_int, nkey: c_int, value: [*c]f32, decim: c_int, comm: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpkne(fptr: [*c]fitsfile, keyroot: [*c]const u8, nstart: c_int, nkey: c_int, value: [*c]f32, decim: c_int, comm: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpkng(fptr: [*c]fitsfile, keyroot: [*c]const u8, nstart: c_int, nkey: c_int, value: [*c]f64, decim: c_int, comm: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpknd(fptr: [*c]fitsfile, keyroot: [*c]const u8, nstart: c_int, nkey: c_int, value: [*c]f64, decim: c_int, comm: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffcpky(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, incol: c_int, outcol: c_int, rootname: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffphps(fptr: [*c]fitsfile, bitpix: c_int, naxis: c_int, naxes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffphpsll(fptr: [*c]fitsfile, bitpix: c_int, naxis: c_int, naxes: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffphpr(fptr: [*c]fitsfile, simple: c_int, bitpix: c_int, naxis: c_int, naxes: [*c]c_long, pcount: LONGLONG, gcount: LONGLONG, extend: c_int, status: [*c]c_int) c_int;
pub extern fn ffphprll(fptr: [*c]fitsfile, simple: c_int, bitpix: c_int, naxis: c_int, naxes: [*c]LONGLONG, pcount: LONGLONG, gcount: LONGLONG, extend: c_int, status: [*c]c_int) c_int;
pub extern fn ffphtb(fptr: [*c]fitsfile, naxis1: LONGLONG, naxis2: LONGLONG, tfields: c_int, ttype: [*c][*c]u8, tbcol: [*c]c_long, tform: [*c][*c]u8, tunit: [*c][*c]u8, extname: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffphbn(fptr: [*c]fitsfile, naxis2: LONGLONG, tfields: c_int, ttype: [*c][*c]u8, tform: [*c][*c]u8, tunit: [*c][*c]u8, extname: [*c]const u8, pcount: LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffphext(fptr: [*c]fitsfile, xtension: [*c]const u8, bitpix: c_int, naxis: c_int, naxes: [*c]c_long, pcount: LONGLONG, gcount: LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffpktp(fptr: [*c]fitsfile, filename: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffghsp(fptr: [*c]fitsfile, nexist: [*c]c_int, nmore: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffghps(fptr: [*c]fitsfile, nexist: [*c]c_int, position: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffmaky(fptr: [*c]fitsfile, nrec: c_int, status: [*c]c_int) c_int;
pub extern fn ffmrky(fptr: [*c]fitsfile, nrec: c_int, status: [*c]c_int) c_int;
pub extern fn ffgnxk(fptr: [*c]fitsfile, inclist: [*c][*c]u8, ninc: c_int, exclist: [*c][*c]u8, nexc: c_int, card: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgrec(fptr: [*c]fitsfile, nrec: c_int, card: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgcrd(fptr: [*c]fitsfile, keyname: [*c]const u8, card: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgstr(fptr: [*c]fitsfile, string: [*c]const u8, card: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgunt(fptr: [*c]fitsfile, keyname: [*c]const u8, unit: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkyn(fptr: [*c]fitsfile, nkey: c_int, keyname: [*c]u8, keyval: [*c]u8, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkey(fptr: [*c]fitsfile, keyname: [*c]const u8, keyval: [*c]u8, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgky(fptr: [*c]fitsfile, datatype: c_int, keyname: [*c]const u8, value: ?*anyopaque, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkys(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]u8, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgksl(fptr: [*c]fitsfile, keyname: [*c]const u8, length: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgkcsl(fptr: [*c]fitsfile, keyname: [*c]const u8, length: [*c]c_int, comlength: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgkls(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c][*c]u8, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgsky(fptr: [*c]fitsfile, keyname: [*c]const u8, firstchar: c_int, maxchar: c_int, value: [*c]u8, valuelen: [*c]c_int, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgskyc(fptr: [*c]fitsfile, keyname: [*c]const u8, firstchar: c_int, maxchar: c_int, maxcomchar: c_int, value: [*c]u8, valuelen: [*c]c_int, comm: [*c]u8, comlen: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fffree(value: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn fffkls(value: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkyl(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]c_int, comm: [*c]u8, status: [*c]c_int) c_int;
